# libmultiprocess

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: Config.cmake.in  LibmultiprocessBinConfig.cmake.in  LibmultiprocessConfig.cmake.in  LibmultiprocessGenConfig.cmake.in  LibmultiprocessLibConfig.cmake.in  LibmultiprocessMacros.cmake  TargetCapnpSources.cmake  capnp_compat.cmake
doc/: design.md  install.md  usage.md
example/: CMakeLists.txt  calculator.capnp  calculator.cpp  example.cpp  printer.capnp  printer.cpp  types.h
include/mp/: config.h.in  proxy-io.h  proxy-types.h  proxy.capnp  proxy.h  type-context.h  type-map.h  util.h
pkgconfig/: libmultiprocess.pc.in
src/mp/: gen.cpp  proxy.cpp  util.cpp
src/mp/test/: foo-types.h  foo.capnp  foo.h  test.cpp
test/: CMakeLists.txt
test/mp/test/: foo-types.h  foo.capnp  foo.h  test.cpp
test/src/mp/test/: foo.capnp  foo.h  test.cpp
